--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
     background: #232323;
     color: #fff;
 }
+h3 {
+    font-size: 2rem;
+    text-align: center;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px #494949, 3px 3px #18cdca;
+}
 .navigation {
     display: flex;
     align-items: center;
@@ -17,6 +23,7 @@ body {
     background: #232323;
     position: sticky;
     top: 0;
+    z-index: 5;
 }
 .nav_list {
     display: flex;
@@ -117,6 +124,24 @@ body {
     background: transparent;
     cursor: pointer;
 }
+.scroll_down {
+    /* background-color: red; */
+    border: 2px solid #18cdca;
+    position: absolute;
+    right: 100px;
+    bottom: 100px;
+    border-radius: 30px;
+    height: 100px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+.scroll_down a {
+    font-size: 2rem;
+    color: #18cdca;
+}
 @media screen and (min-width: 768px) {
     .main h2 {
         font-size: 4rem;
@@ -137,17 +162,12 @@ body {
 .about {
     margin-top: 2rem;
 }
-.about h3 {
-    font-size: 2rem;
-    text-align: center;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px #494949, 3px 3px #18cdca;
-}
 .about_img {
     margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 0.7rem;
 }
 .about_img img {
     max-width: 100%;
@@ -179,7 +199,7 @@ body {
     font-size: 1.2rem;
 }
 @media screen and (min-width: 768px) {
-    .about h3 {
+    h3 {
         font-size: 3rem;
     }
     .about_content {
