--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,9 @@ h3 {
 }
 .aboutus span {
     color: #18cdca;
+    font-style: italic;
+    font-weight: 700;
+    letter-spacing: 2px;
 }
 .aboutus p:nth-child(2) {
     font-size: 1rem;
@@ -243,4 +246,25 @@ h3 {
     .about_img {
         width: 25%;
     }
+}
+
+/* Tech and Tools styling */
+.tech_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.tools {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid #000;
+    padding: 0.7rem;
+}
+.tools img {
+    width: 50px;
+    padding: 0.7rem;
+}
+.tools p {
+    font-size: 0.6rem;
 }
