--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 h3 {
     font-size: 2rem;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 4px;
     text-shadow: 2px 2px #494949, 3px 3px #18cdca;
     margin-top: 2rem;
 }
@@ -343,4 +343,17 @@ h3 {
     .tools p {
         font-size: 1rem;
     }
+}
+/* Project section styling */
+
+.works_wrapper {
+    margin-top: 2rem;
+}
+.work_container {
+    background: url(/assets/profile.jpg);
+    width: 500px;
+    height: 300px;
+    border-radius: 30px;
+    border: 3px solid #fff;
+    position: relative;
 }
