--- a/css/style.css
+++ b/css/style.css
@@ -354,8 +354,8 @@ h3 {
     gap: 2rem;
 }
 .work_container {
-    width: 380px;
-    height: 250px;
+    width: 300px;
+    height: 200px;
     border-radius: 30px;
     border: 3px solid #fff;
     position: relative;
@@ -398,6 +398,12 @@ h3 {
     top: 1rem;
     right: 2.5rem;
 }
+@media screen and (min-width: 420px) {
+    .work_container {
+        width: 380px;
+        height: 250px;
+    }
+}
 @media screen and (min-width: 860px) {
     .works_wrapper {
         grid-template-columns: 380px 380px;
@@ -421,5 +427,63 @@ h3 {
     .work_container p:nth-child(2) {
         margin-top: 0.4rem;
         font-size: 0.8rem;
+    }
+}
+
+/* Contact us styling */
+.form_wrapper {
+    margin-top: 2rem;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    width: 100%;
+    margin: 1rem;
+    background: #393939;
+    border-radius: 6px;
+}
+input,
+textarea {
+    padding: 1rem;
+    margin: 0.2rem;
+    color: #18cdca;
+    font-size: 0.8rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    background: #616161;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+}
+::placeholder {
+    color: #18cdca;
+}
+.form .btn {
+    cursor: pointer;
+    transition: 0.2s linear;
+    font-weight: 600;
+}
+.form .btn:hover {
+    background: #494949;
+}
+@media screen and (min-width: 400px) {
+    .form {
+        width: 400px;
+    }
+}
+@media screen and (min-width: 680px) {
+    .form {
+        width: 500px;
+    }
+    .form input,
+    .form textarea {
+        padding: 1.4rem;
+        margin: 0.37rem;
+        font-size: 1rem;
     }
 }
