--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+}
 body {
     background: #232323;
     color: #fff;
@@ -102,7 +105,7 @@ h3 {
 .main p {
     font-size: 3rem;
     font-weight: 600;
-    color: #494949;
+    color: #9c9c9c;
 }
 .main h2 {
     font-size: 3rem;
