--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h3 {
     align-items: center;
     justify-content: space-around;
     height: 8vh;
-    background: #232323;
+    background: #393939;
     position: sticky;
     top: 0;
     z-index: 5;
@@ -63,7 +63,7 @@ h3 {
         position: fixed;
         flex-direction: column;
         align-items: center;
-        background: #232323;
+        background: #393939;
         top: 8vh;
         width: 100%;
         padding-bottom: 40px;
@@ -143,7 +143,7 @@ h3 {
     align-items: center;
     z-index: 1;
     /* box-shadow: 0 0 10px #18cdca; */
-    animation: glow 2s ease-in-out infinite reverse;
+    animation: glow 2.5s ease-in-out infinite reverse;
 }
 @keyframes glow {
     0% {
@@ -502,5 +502,35 @@ textarea {
         padding: 1.4rem;
         margin: 0.37rem;
         font-size: 1rem;
+    }
+}
+
+/* Footer styling */
+.footer {
+    background: #272727;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 400px;
+    align-items: center;
+    margin-top: 2rem;
+    padding: 2rem 0;
+    color: #18cdca;
+}
+.footer div:nth-child(2) ul li {
+    list-style: none;
+}
+.footer a {
+    color: #18cdca;
+    text-decoration: none;
+}
+.footer div:nth-child(3) a {
+    font-size: 2rem;
+    margin-right: 8px;
+}
+@media screen and (min-width: 680px) {
+    .footer {
+        flex-direction: row;
+        min-height: 200px;
     }
 }
