--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,700&display=swap");
 * {
     margin: 0;
     padding: 0;
@@ -19,6 +18,10 @@ h3 {
     text-shadow: 2px 2px #494949, 3px 3px #18cdca;
     padding-top: 4rem;
 }
+
+/**********************/
+/*     Navigation     */
+/**********************/
 .navigation {
     display: flex;
     align-items: center;
@@ -98,19 +101,9 @@ h3 {
     transform: scaleY(1);
 }
 
-/* Scroll to top styling */
-.scroll-to-top {
-    position: sticky;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-}
-.scroll-to-top a {
-    color: white;
-}
-
-/* Main styling */
-
+/**********************/
+/*     Header         */
+/**********************/
 .main {
     background: url(/assets/portfolio-bg.png);
     background-position: center;
@@ -150,8 +143,11 @@ h3 {
     background: transparent;
     cursor: pointer;
 }
+
+/**********************/
+/*   Scroll to About  */
+/**********************/
 .scroll_down {
-    /* background-color: red; */
     border: 2px solid #18cdca;
     background: #18cdca;
     position: absolute;
@@ -164,9 +160,9 @@ h3 {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    /* box-shadow: 0 0 10px #18cdca; */
     animation: glow 2.5s ease-in-out infinite reverse;
 }
+/* Animation of scroll to about section */
 @keyframes glow {
     0% {
         box-shadow: 0 0 5px #18cdca;
@@ -201,8 +197,9 @@ h3 {
     }
 }
 
-/* About us styling */
-
+/**********************/
+/*     About us       */
+/**********************/
 .about_img {
     margin-top: 4rem;
     display: flex;
@@ -290,7 +287,9 @@ h3 {
     }
 }
 
-/* Tech and Tools styling */
+/**********************/
+/*   Tech and Tools   */
+/**********************/
 .tech_container {
     margin-top: 4rem;
     display: inline-grid;
@@ -314,7 +313,6 @@ h3 {
 }
 .tools:hover {
     background: #272727;
-    /* background: #2e2d2d; */
 }
 .tools img {
     width: 50px;
@@ -380,8 +378,10 @@ h3 {
         font-size: 1rem;
     }
 }
-/* Project section styling */
 
+/**********************/
+/*      Projects      */
+/**********************/
 .works_wrapper {
     margin-top: 4rem;
     display: inline-grid;
@@ -466,7 +466,9 @@ h3 {
     }
 }
 
-/* Contact us styling */
+/**********************/
+/*     Contact us     */
+/**********************/
 .form_wrapper {
     margin-top: 4rem;
     display: flex;
@@ -531,7 +533,9 @@ textarea {
     }
 }
 
-/* Footer styling */
+/**********************/
+/*       Footer       */
+/**********************/
 .footer {
     margin-top: 4rem;
     padding: 2rem 0;
