--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,9 @@ h3 {
     flex-direction: column;
     justify-content: end;
     padding: 1.4rem;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .work_container:nth-child(1) {
     background: url(/assets/project.png);
