--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,26 +8,27 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background: #232323;
-    color: #fff;
+    background: #fff;
+    color:#232323 ;
 }
 h3 {
     font-size: 2rem;
     text-align: center;
     letter-spacing: 4px;
-    text-shadow: 2px 2px #494949, 3px 3px #18cdca;
+   
+    text-shadow: 2px 2px #494949, 3px 3px rgb(166, 192, 139);
     padding-top: 4rem;
 }
 
-/**********************/
-/*     Navigation     */
-/**********************/
+
+/*Navigation*/
 .navigation {
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: 8vh;
-    background: #393939;
+    /* background: #393939; */
+    background: rgb(166, 192, 139);
     position: sticky;
     top: 0;
     z-index: 5;
@@ -36,29 +37,70 @@ h3 {
     width: 140px;
     height: 40px;
 }
+.text-link{
+    text-decoration: none;
+}
 .brand p {
-    color: #18cdca;
-    font-size: 20px;
+    color: #fff;
+    font-size: 30px;
     font-weight: 600;
     letter-spacing: 2px;
+    
 }
 .nav_list {
+    margin: 0;
+    padding: 0;
     display: flex;
+    text-align: center;
+   
 }
+
 .nav_list li {
+    
     padding: 10px;
-    list-style: none;
+    list-style:none;
+    
 }
 .nav_list li a {
-    color: #fff;
+    color: #232323;
     font-size: 16px;
     font-weight: 500;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
 }
 .nav_list li a:hover {
-    color: #18cdca;
+    color:rgb(226, 226, 226);
 }
+.nav_list li a.active {
+    color:rgb(226, 226, 226);
+}
+
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 
 @media screen and (max-width: 768px) {
     .burger_menu {
@@ -76,7 +118,7 @@ h3 {
         position: fixed;
         flex-direction: column;
         align-items: center;
-        background: #393939;
+        background: rgb(198, 215, 180);
         top: 8vh;
         width: 100%;
         padding-bottom: 40px;
@@ -86,7 +128,7 @@ h3 {
     }
 }
 .switch_menu div {
-    background: #18cdca;
+    background: #fff;
 }
 .switch_menu .one {
     transform: rotate(45deg) translate(6px, 8px);
@@ -101,11 +143,11 @@ h3 {
     transform: scaleY(1);
 }
 
-/**********************/
-/*     Header         */
-/**********************/
+
+/* Header */
+
 .main {
-    background: url(/assets/portfolio-bg.png);
+    background: url(/static/assets/web1.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -117,6 +159,8 @@ h3 {
     flex-direction: column;
     padding-left: 4rem;
 }
+
+
 .main p {
     font-size: 3rem;
     font-weight: 600;
@@ -133,23 +177,63 @@ h3 {
     margin-top: 1rem;
     padding: 0.6rem 1.4rem;
     color: #161515;
-    background: #18cdca;
-    border: 2px solid #18cdca;
+    background: rgb(166, 192, 139);
+    border: 2px solid rgb(166, 192, 139);
     border-radius: 2rem;
     transition: 0.2s ease-in-out;
 }
 .main button:hover {
-    color: #18cdca;
+    color: rgb(166, 192, 139);
     background: transparent;
     cursor: pointer;
 }
+.intro{
+    margin:250px;
+}
+.intro-h4{
+    font-size: 35px; 
+    font-family:'Times New Roman', Times, serif;
+    color: rgb(255, 255, 255); 
+    text-shadow: 2px 2px #202020, 3px 3px rgb(0, 0, 0);
+    text-align: center;
+}
+.intro-a{
+    font-size: 15px; 
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(255, 255, 255); 
+    text-shadow: none;
+    font-style: italic; 
+    font-weight: 100; 
+}
 
-/**********************/
-/*   Scroll to About  */
-/**********************/
+@media screen and (max-width: 1096px) {
+.intro{
+    margin: auto;
+    padding-right: 1.8rem;
+ } 
+.intro-h4{
+    font-size: 20px; 
+    color: rgb(255, 255, 255); 
+    text-shadow: 2px 2px #202020, 3px 3px rgb(0, 0, 0);
+    
+    
+}
+.intro-a{
+    font-size: 10px; 
+    color: rgb(255, 255, 255); 
+    font-style: italic; 
+    font-weight: 100; 
+}
+}
+
+  
+
+
+/*Scroll to About*/
+
 .scroll_down {
-    border: 2px solid #18cdca;
-    background: #18cdca;
+    border: 2px solid rgb(166, 192, 139);
+    background: rgb(166, 192, 139);
     position: absolute;
     right: 20px;
     bottom: 20px;
@@ -197,9 +281,30 @@ h3 {
     }
 }
 
-/**********************/
-/*     About us       */
-/**********************/
+
+/*About us */
+
+.about{
+    background:
+	linear-gradient(
+		limegreen,
+		transparent
+	),
+	linear-gradient(
+		90deg,
+		skyblue,
+		transparent
+	),
+	linear-gradient(
+		-90deg,
+		coral,
+		transparent
+	);
+	
+background-blend-mode: screen;
+}
+
+
 .about_img {
     margin-top: 4rem;
     display: flex;
@@ -221,24 +326,21 @@ h3 {
     font-weight: 500;
 }
 .aboutus span {
-    color: #18cdca;
-    font-style: italic;
+    color: rgb(240, 243, 236);
+    
     font-weight: 700;
     letter-spacing: 2px;
 }
 .aboutus p:nth-child(2) {
-    font-size: 1rem;
+    font-style: italic;
+    font-size: 0.5rem;
+    font-weight: 100;
     margin-top: 0.8rem;
     line-height: 1.6;
+    
 }
-.aboutus .socials {
-    display: inline-flex;
-    gap: 1rem;
-    margin-top: 0.4rem;
-}
-.aboutus .socials a {
-    color: #18cdca;
-    font-size: 1.2rem;
+.para{
+    font-size: 12px;
 }
 @media screen and (min-width: 768px) {
     h3 {
@@ -277,9 +379,6 @@ h3 {
         font-size: 1.4rem;
         letter-spacing: 1px;
     }
-    .aboutus .socials a {
-        font-size: 1.4rem;
-    }
 }
 @media screen and (min-width: 1450px) {
     .about_img {
@@ -287,197 +386,134 @@ h3 {
     }
 }
 
-/**********************/
-/*   Tech and Tools   */
-/**********************/
-.tech_container {
-    margin-top: 4rem;
-    display: inline-grid;
-    width: 100%;
-    justify-content: center;
-    grid-template-columns: 80px 80px 80px;
-    gap: 0.8rem;
-    padding: 0.8rem;
+
+/*Artwork tab */
+
+.tech_tools{
+    background: linear-gradient(red, transparent),
+    linear-gradient(to top left, lime, transparent),
+    linear-gradient(to top right, blue, transparent);
+background-blend-mode: screen;
+    height: 250px;
+    text-align: center;
 }
-.tools {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 4px;
-    background: #2e2d2d;
-    padding: 0.7rem;
-    width: 80px;
-    height: 80px;
-    transition: all 0.3s ease;
+
+    
+/* TEST */
+.container{
+    display:grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-auto-rows:100px 300px;
+    grid-gap:5px;
+    grid-auto-flow: dense;
 }
-.tools:hover {
-    background: #272727;
+
+.gallery-item{
+    width:100%;
+    height:100%;
+    position:relative;
 }
-.tools img {
-    width: 50px;
-    padding: 0.7rem;
+
+.gallery-item .image{
+    width:100%;
+    height:100%;
+    overflow:hidden;
 }
-.tools p {
-    font-size: 0.6rem;
-    letter-spacing: 1px;
-    font-weight: 500;
-    color: #18cdca;
+
+.gallery-item .image img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    object-position:50% 50%;
+    cursor:pointer;
+    transition:.5s ease-in-out;
 }
-@media screen and (min-width: 600px) {
-    .tech_container {
-        grid-template-columns: 80px 80px 80px 80px 80px;
-    }
+.gallery-item:hover .image img{
+    transform:scale(1.5);
 }
-@media screen and (min-width: 768px) {
-    .tech_container {
-        grid-template-columns: 100px 100px 100px 100px 100px;
-        gap: 1rem;
-    }
-    .tools {
-        width: 100px;
-        height: 100px;
-    }
-    .tools img {
-        width: 55px;
-    }
-    .tools p {
-        font-size: 0.7rem;
-    }
+
+.gallery-item .text{
+    opacity:0;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    color:#fff;
+    font-size:25px;
+    pointer-events:none;
+    z-index:4;
+    transition: .3s ease-in-out;
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    backdrop-filter: blur(5px) saturate(1.8);
 }
-@media screen and (min-width: 1096px) {
-    .tech_container {
-        grid-template-columns: 120px 120px 120px 120px 120px;
-        gap: 1.2rem;
-    }
-    .tools {
-        width: 120px;
-        height: 120px;
-    }
-    .tools img {
-        width: 65px;
-    }
-    .tools p {
-        font-size: 0.9rem;
-    }
+
+.gallery-item:hover .text{
+    opacity:1;
+    animation: move-down .3s linear;
+    padding:1em;
+    width:100%;
 }
-@media screen and (min-width: 1450px) {
-    .tech_container {
-        grid-template-columns: 150px 150px 150px 150px 150px;
-        gap: 1.4rem;
+
+.gallery-container:nth-child(even){
+    grid-column: span 2;
+    grid-row: span 2;
+    
+}
+.gallery-container:nth-child(odd){
+    grid-column: span 1;
+    grid-row: span 2;
+}
+
+
+
+
+
+
+@media screen and (max-width:950px){
+    .container{
+        grid-template-columns: repeat(1,1fr);
     }
-    .tools {
-        width: 150px;
-        height: 150px;
-        border-radius: 6px;
-    }
-    .tools img {
-        width: 80px;
-    }
-    .tools p {
-        font-size: 1rem;
+    .w-1,.w-2,.w-3,.w-4,.w-5,.w-6{
+        grid-column:span 1;
     }
 }
 
-/**********************/
+
+@keyframes move-down{
+
+    0%{
+        top:10%;
+    }
+    50%{
+        top:35%;
+    }
+    100%{
+        top:50%;
+    }
+}
+  
+
+  
+
 /*      Projects      */
-/**********************/
-.works_wrapper {
-    margin-top: 4rem;
-    display: inline-grid;
-    width: 100%;
-    justify-content: center;
-    gap: 2rem;
+
+.works{
+    margin: 0;
 }
-.work_container {
-    width: 300px;
-    height: 200px;
-    border-radius: 30px;
-    border: 3px solid #fff;
-    position: relative;
+/*Forms */
+
+.nav-form{
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    padding: 1.4rem;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    padding: 1rem;
+    width: 160px;
+    margin: 1rem;
+    background: rgb(166, 192, 139);
+    border-radius: 6px;
 }
-.work_container:nth-child(1) {
-    background: url(/assets/project.png);
-}
-.work_container:nth-child(2) {
-    background: url(/assets/project.png);
-}
-.work_container:nth-child(3) {
-    background: url(/assets/project.png);
-}
-.work_container:nth-child(4) {
-    background: url(/assets/project.png);
-}
-.work_container p:nth-child(1) {
-    font-size: 1rem;
-    color: #18cdca;
-    font-weight: 500;
-}
-.work_container p:nth-child(2) {
-    margin-top: 0.3rem;
-    font-size: 0.7rem;
-}
-.work_container a {
-    color: #18cdca;
-}
-.fa-github {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-}
-.fa-external-link-alt {
-    position: absolute;
-    top: 1rem;
-    right: 2.5rem;
-}
-@media screen and (min-width: 420px) {
-    .work_container {
-        width: 380px;
-        height: 250px;
-    }
-}
-@media screen and (min-width: 860px) {
-    .works_wrapper {
-        grid-template-columns: 380px 380px;
-        gap: 0 2rem;
-    }
-    .works_wrapper div:nth-child(even) {
-        margin-top: 2rem;
-    }
-}
-@media screen and (min-width: 1260px) {
-    .works_wrapper {
-        grid-template-columns: 400px 400px;
-    }
-    .work_container {
-        width: 400px;
-        height: 270px;
-    }
-    .work_container p:nth-child(1) {
-        font-size: 1.3rem;
-    }
-    .work_container p:nth-child(2) {
-        margin-top: 0.4rem;
-        font-size: 0.8rem;
-    }
-}
-
-/**********************/
-/*     Contact us     */
-/**********************/
-.form_wrapper {
-    margin-top: 4rem;
+.upload-form{
     display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+    padding: 1.4rem;
 }
 .form {
     display: flex;
@@ -485,14 +521,15 @@ h3 {
     padding: 1rem;
     width: 100%;
     margin: 1rem;
-    background: #393939;
+    background: rgb(166, 192, 139);
     border-radius: 6px;
 }
 input,
 textarea {
     padding: 1rem;
+    /* width: 5rem; */
     margin: 0.2rem;
-    color: #18cdca;
+    color: rgb(166, 192, 139);
     font-size: 0.8rem;
     font-weight: 500;
     letter-spacing: 1px;
@@ -502,7 +539,7 @@ textarea {
     outline: none;
 }
 ::placeholder {
-    color: #18cdca;
+    color: rgb(166, 192, 139);
 }
 .form .btn {
     width: 40%;
@@ -512,12 +549,20 @@ textarea {
     font-weight: 600;
 }
 .form .btn:hover {
-    background: #494949;
+    background: #dbdbdb;
 }
 @media screen and (min-width: 400px) {
     .form {
         width: 400px;
     }
+}
+@media screen and (max-width: 1096px){
+    .upload-form {
+        margin: auto;
+        overflow-x: hidden;
+        width: 350px;
+    }
+
 }
 @media screen and (min-width: 680px) {
     .form {
@@ -535,23 +580,63 @@ textarea {
         width: 600px;
     }
 }
+/* ARTS */
 
-/**********************/
-/*       Footer       */
-/**********************/
+.fullimg{
+    width: 100%;
+    height: 160vh;
+    background: rgba(0,0,0,0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    
+    z-index: 100;
+    justify-content: center;
+}
+.fullimg img{
+    width: 90%;
+    height: 750px;
+    max-width: 600px;
+}
+.fullimg span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: rgb(166, 192, 139);
+    cursor: pointer;
+}
+/* Comment */
+.comment{
+    padding: 1.4rem;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+.delete{
+    color: rgb(161, 6, 6);
+    text-decoration: none;
+    margin: 0;
+}
+
+
+/*Footer */
+
 .footer {
     margin-top: 4rem;
     padding: 2rem 0;
-    background: #272727;
+    background: #fff;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     min-height: 300px;
     align-items: center;
-    color: #18cdca;
+    color: rgb(166, 192, 139);
 }
 .footer div:nth-child(1) p:nth-child(1) {
-    color: #18cdca;
+    color: rgb(166, 192, 139);
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 2px;
@@ -562,7 +647,7 @@ textarea {
     height: 40px;
 }
 .footer a {
-    color: #18cdca;
+    color: rgb(166, 192, 139);
     text-decoration: none;
 }
 .footer div:nth-child(2) a {
