changed background image in about sec

--- a/templates/aboutn.html
+++ b/templates/aboutn.html
@@ -51,7 +51,7 @@
     </div> <!-- End of navbar -->
 
     <!-- Header -->
-    <div class="main" style="background: url(/static/assets/dami1.JPG); background-repeat: no-repeat; background-size: cover ; background-position: center; height: 150vh; " id="home">
+    <div class="main" style="background: url(/static/assets/DDD.JPG); background-repeat: no-repeat; background-size: cover ; background-position: center; height: 150vh; " id="home">
       
         <div class="scroll_down">
             <a href="#about"><i class="fas fa-angle-double-down"></i></a>
